--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -1,246 +1,195 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>How It Works | Uberspinners</title>
-  <meta name="description" content="Understand how Uberspinners social casino games stay free, token-based, and focused on community rewards—virtual currency only, zero cash-out.">
-  <meta name="keywords" content="Uberspinners, social casino games, virtual currency, prestige frames, daily bonus">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="How It Works | Uberspinners">
-  <meta property="og:description" content="Understand the Uberspinners lounge and how our social casino games stay free, token-based, and community driven.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>How FortunePlay Works</title>
+  <meta name="description" content="Understand the FortunePlay Fun flow, virtual currency only, calm rooms, and nightly drops.">
+  <link rel="canonical" href="https://fortuneplay.fun/how-it-works/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="How FortunePlay Works">
+  <meta property="og:description" content="Learn the simple steps to join our social casino lounge.">
+  <meta property="og:url" content="https://fortuneplay.fun/how-it-works/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/how-it-works/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="How It Works | Uberspinners">
-  <meta name="twitter:description" content="Understand the Uberspinners lounge and how our social casino games stay free, token-based, and community driven.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/how-it-works/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="How FortunePlay Works">
+  <meta name="twitter:description" content="Virtual-only, zero cash-outs, pure vibe.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface ux-hiw-hero-0ff2" id="hiw-overview">
-      <div class="container page-intro" id="dv-hiw-intro-0ff2">
-        <p class="section-eyebrow">Blueprint</p>
-        <h1>How our social casino games stay free &amp; friendly</h1>
-        <p class="lead">
-          Uberspinners lays out exactly how our social casino games operate: they run on virtual tokens, remain free of deposits,
-          and reward curiosity with prestige cosmetics plus nightly surprises.
-        </p>
-        <p class="hero-note ux-hiw-note-6c3d">
-          Everything below applies to social casino games built purely for entertainment&mdash;no payouts, no wagering, and no secret monetisation hooks.
-        </p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Lounge primer</p>
+          <h1>How FortunePlay works.</h1>
+          <p>Virtual-only, zero cash-outs, curated nightly drops.</p>
+        </div>
+        <div class="hero__card">
+          <h3>Need walkthrough help?</h3>
+          <p>Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> and we'll set up a session.</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body ux-hiw-body-19b3" id="hiw-body">
-      <section class="callout ux-hiw-callout-9c8d" id="hiw-token-rules">
-        <div id="dv-hiw-token-719a">
-          <h2>Token truths we stand by</h2>
-          <p>
-            Before you explore our social casino games, start with the non-negotiables behind the currency system.
-          </p>
-          <ul class="checklist">
-            <li>🚫 <strong>No Real Money:</strong> All points, chips, and diamonds stay fictional inside the lounge.</li>
-            <li>🚫 <strong>No Cash-Out:</strong> Virtual currency cannot be redeemed, sold, bartered, or traded.</li>
-            <li>🚫 <strong>No Purchases Required:</strong> You never need to pay to play or progress.</li>
-            <li>🚫 <strong>No Gateway to Gambling:</strong> Our social casino games never link to or promote real-money casinos.</li>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card">
+          <h2>Important facts</h2>
+          <ul>
+            <li>No payments, no withdrawals.</li>
+            <li>Only virtual tokens and frames.</li>
+            <li>18+ access with region checks.</li>
           </ul>
-        </div>
-      </section>
-
-      <section class="ux-hiw-steps-91e7" id="hiw-steps">
-        <div id="dv-hiw-steps-5de6">
-          <h2>Your first lap through the lounge</h2>
-          <p>
-            Setting up for our social casino games takes four quick steps; you can finish them faster than a kettle boils.
-          </p>
-          <ol class="ordered-list">
-            <li>Create a free lounge pass via email (see the <a href="/auth/">account guide</a>)&mdash;no card prompts ever.</li>
-            <li>Collect 1,000 welcome chips credited instantly after activation.</li>
-            <li>Launch any title directly from its dedicated page and bookmark favourites for instant access.</li>
-            <li>Return daily to claim bonus drops, climb the <a href="/leaderboard/">leaderboard</a>, and earn frames.</li>
-          </ol>
-        </div>
-      </section>
-
-      <section class="ux-hiw-table-5520" id="hiw-currencies">
-        <div id="dv-hiw-currencies-a91b">
-          <h2>Token types, at a glance</h2>
-          <p class="muted">
-            Each currency fuels a different layer of our social casino games, so keep this legend handy whenever you need a refresher.
-          </p>
-          <div class="table-wrapper" id="dv-hiw-table-5520">
-          <table>
+        </article>
+        <article class="content-card">
+          <h2>Step 1 · Create a lounge pass</h2>
+          <p>Sign up with email + display name. We send a verification link.</p>
+        </article>
+        <article class="content-card">
+          <h2>Step 2 · Collect welcome chips</h2>
+          <p>1,000 chips drop automatically. They reset weekly so everyone stays even.</p>
+        </article>
+        <article class="content-card">
+          <h2>Step 3 · Choose a room</h2>
+          <p>Pick from cards, slots, or hybrid rooms. Each page lists difficulty, pace, and average session length.</p>
+        </article>
+        <article class="content-card">
+          <h2>Step 4 · Earn flair</h2>
+          <p>Complete quests to unlock frames, profile badges, or vibe tracks. Frames show up on the leaderboard and profile.</p>
+        </article>
+        <article class="content-card content-card--wide">
+          <h2>Currency glossary</h2>
+          <table class="table-stack">
             <thead>
               <tr>
-                <th scope="col">Currency</th>
-                <th scope="col">How it’s earned</th>
-                <th scope="col">What it does</th>
+                <th>Token</th>
+                <th>Earned via</th>
+                <th>Used for</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Points (Chips)</td>
-                <td>Daily Bonus claims, playing any game, seasonal quests</td>
-                <td>Unlocks new games, tracks session activity, seeds streak multipliers</td>
+                <td>Chips</td>
+                <td>Daily drops, quests, room play</td>
+                <td>Access new rooms, track progress</td>
               </tr>
               <tr>
-                <td>Experience (XP)</td>
-                <td>First game launch of the day, leaderboard placement, community events</td>
-                <td>Levels up your profile, revealing frames and banner cosmetics</td>
+                <td>Glow</td>
+                <td>Community events</td>
+                <td>Unlock animated frames</td>
               </tr>
               <tr>
-                <td>Diamonds</td>
-                <td>Ten-day streaks, special lounge milestones</td>
-                <td>Prestige tokens that unlock exclusive frames and profile animations</td>
+                <td>Cred</td>
+                <td>Peer recognition</td>
+                <td>Boosts your lounge profile</td>
               </tr>
             </tbody>
           </table>
-          <p class="table-footnote">
-            None of the above can be exchanged for money or goods. They exist solely for in-lounge recognition.
-          </p>
-        </div>
-        </div>
-      </section>
-
-      <section class="ux-hiw-progress-47dd" id="hiw-progress">
-        <div id="dv-hiw-progress-cd32">
-          <h2>Progress paths &amp; prestige frames</h2>
-          <p>
-            Each level requires an incremental XP total (Level 1 = 100 XP, Level 2 = 200 XP, etc.), and that pacing keeps our social casino games interesting without demanding a grind.
-            When you level up, you unlock frame fragments that assemble into the <a href="/frames/">prestige collection</a>.
-          </p>
-          <ul class="checklist">
-            <li>Daily activity caps prevent power-leveling—no 24/7 marathons required.</li>
-            <li>Frames are evergreen; once unlocked they remain in your closet even after resets.</li>
-            <li>Seasonal events add limited-time frames that may return based on community votes.</li>
+        </article>
+        <article class="content-card">
+          <h2>What you can't do</h2>
+          <ul>
+            <li>Convert tokens to cash.</li>
+            <li>Sell or transfer accounts.</li>
+          <li>Use macros or any automation that spoils the room.</li>
           </ul>
-        </div>
-      </section>
-
-      <section class="ux-hiw-guardrails-c88a" id="hiw-guardrails">
-        <div id="dv-hiw-guardrails-2f9e">
-          <h2>Hard limits that keep us honest</h2>
-          <p>
-            These guardrails keep the vibe generous and keep social casino games from drifting into gambling territory.
-          </p>
-          <ul class="checklist">
-            <li>❌ Convert virtual currency into cash or cryptocurrencies.</li>
-            <li>❌ Win real-world prizes, vouchers, or monetary equivalents.</li>
-            <li>❌ Transfer currency to other players or external platforms.</li>
-            <li>❌ Sell, trade, or share your account credentials.</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="ux-hiw-legal-1de5" id="hiw-legal">
-        <div id="dv-hiw-legal-0c15">
-          <h2>A quick legal reminder</h2>
-          <p class="muted">
-            Uberspinners is operated by DIGIBOX LTD OOD as a social casino platform for adults aged 18 and over.
-            Our social casino games are simulated entertainment and do not constitute gambling. Playing free online games does
-            not imply future success at real-money gambling. For support and wellbeing resources, visit the <a href="/responsible-play/">Responsible Play center</a>.
-          </p>
-        </div>
-      </section>
+        </article>
+        <article class="content-card">
+          <h2>Need a reset?</h2>
+          <p>Contact <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> to wipe progress, pause access, or check logs.</p>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
