--- a/responsible-play/index.html
+++ b/responsible-play/index.html
@@ -3,192 +3,164 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Responsible Play | Uberspinners</title>
-  <meta name="description" content="Uberspinners promotes healthy, responsible entertainment. Learn about age limits, support resources, and account controls for our virtual casino lounge.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Responsible Play | Uberspinners">
-  <meta property="og:description" content="Uberspinners promotes healthy, responsible entertainment and provides support resources.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Responsible Play | FortunePlay Fun</title>
+  <meta name="description" content="FortunePlay Fun is entertainment-only. Review our safety tools, age limits, and support resources.">
+  <link rel="canonical" href="https://fortuneplay.fun/responsible-play/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Responsible Play | FortunePlay Fun">
+  <meta property="og:description" content="Safety-first policies and resources for the FortunePlay lounge.">
+  <meta property="og:url" content="https://fortuneplay.fun/responsible-play/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/responsible-play/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Responsible Play | Uberspinners">
-  <meta name="twitter:description" content="Uberspinners promotes healthy, responsible entertainment and provides support resources.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/responsible-play/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Responsible Play | FortunePlay Fun">
+  <meta name="twitter:description" content="Mindful play guidelines and help lines.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link is-active">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/" aria-current="page">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Responsible Play</h1>
-        <p class="lead">
-          Your safety and well-being come first. Uberspinners is an entertainment-only lounge,
-          and we provide clear guidance to help every guest keep play balanced and enjoyable.
-        </p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Safety first</p>
+          <h1>Responsible play is our non-negotiable.</h1>
+          <p>FortunePlay is a chill lounge, not a path to profit. Keep sessions mindful, respect limits, and ask for help when something feels off.</p>
+        </div>
+        <div class="hero__card">
+          <h3>Need immediate help?</h3>
+          <p>Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> with "Pause Request" and we'll lock your account within minutes.</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body">
-      <section class="callout">
-        <h2>Important notices</h2>
-        <ul class="checklist">
-          <li><strong>18+ only:</strong> You must be at least 18 years old to access the lounge.</li>
-          <li><strong>No real money:</strong> Chips, points, diamonds, and frames have zero monetary value.</li>
-          <li><strong>No cash prizes:</strong> Nothing earned within Uberspinners can be withdrawn or traded.</li>
-          <li><strong>Entertainment only:</strong> Social casino play does not translate to success with real gambling.</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Keeping play healthy</h2>
-        <ul class="checklist">
-          <li>Set gentle time limits and take regular breaks to avoid fatigue.</li>
-          <li>Remember that every spin uses random number generators-previous outcomes never influence future results.</li>
-          <li>Play for relaxation, not as a way to earn money or solve financial challenges.</li>
-          <li>Share your playtime with trusted friends or family if you need accountability.</li>
-        </ul>
-      </section>
-
-      <section class="resource-grid">
-        <div>
-          <h2>Support resources</h2>
-          <p class="muted">
-            If you or someone you know is worried about gambling behaviour, confidential help is available worldwide.
-          </p>
-        </div>
-        <div class="resource-card">
-          <h3>🇸🇪 Sweden</h3>
-          <p class="muted">Stödlinjen</p>
-          <p class="muted">Phone: 020-81 91 00</p>
-          <a href="https://www.stodlinjen.se" rel="noopener noreferrer">www.stodlinjen.se</a>
-        </div>
-        <div class="resource-card">
-          <h3>🇪🇺 Europe</h3>
-          <a href="https://www.begambleaware.org" rel="noopener noreferrer">BeGambleAware.org</a>
-          <a href="https://www.gamblersanonymous.org" rel="noopener noreferrer">Gamblers Anonymous</a>
-        </div>
-        <div class="resource-card">
-          <h3>🇺🇸 United States</h3>
-          <p class="muted">National Council on Problem Gambling</p>
-          <p class="muted">Phone: 1-800-522-4700</p>
-          <a href="https://www.ncpgambling.org" rel="noopener noreferrer">www.ncpgambling.org</a>
-        </div>
-        <div class="resource-card highlight">
-          <p><strong>Emergency support:</strong> Many organisations offer 24/7 chat and helplines. You are not alone, and reaching out early is a sign of strength.</p>
-        </div>
-      </section>
-
-      <section>
-        <h2>Account controls</h2>
-        <p>
-          Need to take a breather? Email <a href="mailto:support@uberspinners.com">support@uberspinners.com</a> and our moderation team can:
-        </p>
-        <ul class="checklist">
-          <li>Temporarily suspend your lounge access for a duration you choose.</li>
-          <li>Permanently close your account and erase stored progression.</li>
-          <li>Remove your email from newsletters and promotional updates.</li>
-        </ul>
-        <p class="muted">
-          We action requests promptly-usually within the same day-because your peace of mind matters.
-        </p>
-      </section>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card">
+          <h2>Core principles</h2>
+          <ul>
+            <li>18+ only.</li>
+            <li>No cash prizes or cash-outs, everything is virtual.</li>
+            <li>Random outcomes mean past spins never affect future ones.</li>
+          </ul>
+        </article>
+        <article class="content-card">
+          <h2>Tools you control</h2>
+          <ul>
+            <li>Session reminders every 15, 30, or 60 minutes.</li>
+            <li>Quiet mode to hide leaderboards.</li>
+            <li>Self-pauses (24 hours, 7 days, or permanent).</li>
+          </ul>
+        </article>
+        <article class="content-card">
+          <h2>Request a pause</h2>
+          <ol>
+            <li>Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a>.</li>
+            <li>Include username + pause length.</li>
+            <li>We confirm and lock access within 12 hours (usually faster).</li>
+          </ol>
+        </article>
+        <article class="content-card">
+          <h2>Community support</h2>
+          <p>Moderators watch for distress signals and can nudge you toward resources or pause options mid-session.</p>
+        </article>
+        <article class="content-card content-card--wide">
+          <h2>External resources</h2>
+          <ul>
+            <li><a href="https://www.ncpgambling.org/" rel="nofollow">NCPG (US)</a></li>
+            <li><a href="https://www.begambleaware.org/" rel="nofollow">BeGambleAware (UK)</a></li>
+            <li><a href="https://www.gamblersanonymous.org/ga/" rel="nofollow">Gamblers Anonymous</a></li>
+            <li><a href="https://www.gamcare.org.uk/" rel="nofollow">GamCare</a></li>
+          </ul>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
